# domo-project

domo-backend/: API.md  Cargo.toml  README.md  registration.sh  test_leaderboard.sh  test_referral_system.sh
domo-backend/src/api_server/: Cargo.toml
domo-backend/src/api_server/src/: domo_config.rs  main.rs  models.rs  response_wrapper.rs  utils.rs
domo-backend/src/api_server/src/api/: auth_api.rs  balance_api.rs  employee_api.rs  game_api.rs  mod.rs  referral_api.rs  user_api.rs
domo-backend/src/game_core/: Cargo.toml
domo-backend/src/game_core/src/: lib.rs  utils.rs
domo-backend/src/game_core/src/domain/: domains.rs
domo-backend/src/game_core/src/infra/: mod.rs  pg_balance_repo.rs  pg_base_repo.rs  pg_boss_repo.rs  pg_employee_repo.rs
domo-backend/src/game_core/src/logic/: balance_logic.rs  base_logic.rs  boss_logic.rs  employee_logic.rs  mod.rs
domo-backend/src/game_core/src/repository/: balance_repo.rs  base_repo.rs  boss_repo.rs  employee_repo.rs  mod.rs
domo-backend/src/migrations/: 01_auth.sql  02_game_model.sql  03_deposits_table.sql  04_referrals_table.sql  05_starter_packs_table.sql  06_balance_table.sql  drop.sql
domo-backend/src/storage/: Cargo.toml
domo-backend/src/token_bridge/: Cargo.toml
domo-frontend/: bun.lockb  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
domo-frontend/src/: Layout.tsx  index.css  main.tsx
domo-frontend/src/components/: WalletButton.tsx
domo-frontend/src/config/: wallet.ts
domo-frontend/src/constants/: game.ts
domo-frontend/src/contexts/: StarterPackContext.tsx
domo-frontend/src/hooks/: useAuth.ts  useBalance.ts  useBoss.ts  useEmployee.ts
domo-frontend/src/pages/: Blog.tsx  Employees.tsx  Home.tsx  Marketplace.tsx  Storage.tsx  Store.tsx
domo-frontend/src/services/: api.ts  walletConnet.ts
(+78 files in other folders)
