[package]
name = "api_server"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11"
chrono = { version = "0.4.26", features = ["serde"] }
actix-web = "4.0"
serde_json = "1.0"
jsonwebtoken = "9.3.1"
config = "0.15.11"
anyhow = "1.0"
dotenv = "0.15"
bs58 = "0.5.1"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = "2.1.1"
thiserror = "2.0.12"
byteorder = "1.5"
futures = "0.3.31"
actix-http = "3.11"

game_core = { path = "../game_core" }

solana-sdk = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
log = { workspace = true }
lazy_static = { workspace = true }